--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="firstpost-wrapper">
                     <div class="uploadheader1">
                         <img src="/wealth1.jpeg" alt="" width="32">
-                        <span><b>djtohbad</b></span>
+                        <span><b>wealth</b></span>
                     </div>
                     <div class="uploadmain1">
                         <img src="/wealth 2.jpeg" alt="" width="430px" >
@@ -182,11 +182,11 @@
                         <div>
                             <a href="" class="likedimg1"><img src="/likedimg1.jpeg" alt="" width="20px" class=""></a>
                             <span>Liked by <b> djmassive</b> and <b>others</b></span>
-                            <p><a href=""><b>djtohbad</b></a> For Davido. 🙏🏾❤️</p>
+                            <p><a href=""><b>wealth</b></a> For Davido. 🙏🏾❤️</p>
                             <div>
                                 <a class="more-control" href="">... more</a>
                                 <p class="more-control"><a href="" class="more-control"></a>view all 8 comments</p>
-                                <a href=""><b>budweisernigeria</b></a>
+                                <a href=""><b>wealth</b></a>
                                 <span><a href="">@zinny</a> nice</span>
                             </div>  
                         </div>
